Release 0.2.0 with concise Prism and AMP installation guides